<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PG Transit</string>
    <string name="app_bundle_url">https://play.google.com/store/apps/details?id=com.finke.pgtransit</string>
    <string name="app_bundle">com.finke.pgtransit</string>
    <string name="dev_email">danielfinke2011@gmail.com</string>
    
    
    <!-- Advertising -->
    
    <!-- In-app Billing -->
    <string name="you_can_now_remove_ads">You can now remove ads. Go to the Settings/More page to do so.</string>
    <string name="iab_sku_remove_ads">remove_ads</string>
    <string name="iab_prefs">iabPrefs</string>
    
    <string name="map_image_button">&quot;Go Back&quot;</string>
    
    <string name="routeListTitle">PG Bus Routes</string>
    <string name="actionMenu">Menu</string>
    <string name="menuItemBasicMap">View Basic Map</string>
    <string name="menuItemMore">Settings/More</string>
    <string name="menuChangeDayTitle">Change Day</string>
    <string name="mapTitle">PG Transit Map</string>
    <string name="mapDrawerButton">Select Routes</string>
    <string name="no_routes">No Routes</string>
    <string name="route_not_operating">The selected route does not operate on</string>
    
    <string name="estimated_arrival_text">Estimated Arrival:</string>
    <string name="estimated_departure_text">Estimated Departure:</string>
    <string name="estimated_time_format">%1$d:%2$02d %3$s</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="no_more_arrivals_today">No more arrivals today</string>
    <string name="tap_for_more_times_text">Tap popup for more times</string>
    
    <!-- More view -->
    <string name="more_about_header">About</string>
    <string name="more_about_text">About the PG Transit app</string>
    <string name="more_about_dialog">Bus routes and schedules in this product or service are effective as of Sep 4 2016. This application assumes no responsibility for the accuracy of data. \u00A9 2016 Daniel Finke. Images and partial design courtesy and \u00A9 2012&#8211;2013 Xinyi Zhuang, UNBC Artificial and Intelligence lab.</string>
    <string name="more_share_header">Invite to PG Transit</string>
    <string name="more_share_body">Hey! You should check out this awesome transit app for Android:\n</string>
    <string name="more_share_sms">Share by Text Message</string>
    <string name="more_share_fb">Share by Facebook</string>
    <string name="more_share_tw">Tweet PG Transit</string>
    <string name="more_share_email">Share by E-Mail</string>
    <string name="more_iab_header">Premium</string>
    <string name="more_iab_GPS_not_installed">Google Play Services must be installed on your device to access paid features.</string>
    <string name="more_iab_ads">Remove ads ($1.29)</string>
    <string name="more_iab_restore">Restore purchases</string>
    <string name="more_feedback_header">Feedback</string>
    <string name="more_feedback_rate">Rate this app</string>
    <string name="more_feedback_bugs">Report bugs</string>
    
    <!-- Placeholders for XML -->
    <string name="circle_placeholder">15</string>
    <string name="circle_content_desc">Route Icon</string>
    <string name="minor_stop_name_placeholder">Southbound N Ospika at McIntyre</string>
    <string name="estimated_arrival_value_placeholder">8:58 PM</string>
    <string name="estimated_departure_value_placeholder">9:01 PM</string>

</resources>