<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/minor_stop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/minor_stop_name_placeholder"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/estimated_departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/estimated_arrival"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/estimated_departure_text" />
    
    <TextView
        android:id="@+id/estimated_departure_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/estimated_arrival"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_toEndOf="@id/estimated_departure"
        android:layout_toRightOf="@id/estimated_departure"
        android:text="@string/estimated_departure_value_placeholder" />

    <TextView
        android:id="@+id/estimated_arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minor_stop_name"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/estimated_arrival_text" />

    <TextView
        android:id="@+id/estimated_arrival_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/estimated_departure_value"
        android:layout_alignStart="@id/estimated_departure_value"
        android:layout_below="@id/minor_stop_name"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_toEndOf="@id/estimated_arrival"
        android:layout_toRightOf="@id/estimated_arrival"
        android:text="@string/estimated_arrival_value_placeholder" />

    <TextView
        android:id="@+id/tap_for_more_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/estimated_departure"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/tap_for_more_times_text"
        android:textSize="12sp"
        android:textStyle="italic" />

</RelativeLayout>
